--- a/demo2.html
+++ b/demo2.html
@@ -18,7 +18,8 @@
         method: "leftSlide",    // 可选参数
         containerId: 'body',    // 可选参数
         duration: '1.5s', // 可选参数
-        delay: 2000     //  可选参数
+        delay: 2000,     //  可选参数
+        hasLink: true
     };
     slider.init();
 </script>
