--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <style>
-    div {
+    main div {
         height: 100%;
         width: 100%;
         border: 1px solid springgreen;
@@ -22,6 +22,12 @@
         width: 500px;
         height: 300px;
     }
+
+    footer div {
+        border: 1px solid black;
+        width: 100px;
+        height: 35px;
+    }
 </style>
 <body>
     <main>
@@ -31,7 +37,13 @@
             <div>4</div>
             <div>5</div>
     </main>
-
+    <footer>
+        <div id="1">1</div>
+        <div id="2">2</div>
+        <div id="3">3</div>
+        <div id="4">4</div>
+        <div id="5">5</div>
+    </footer>
 </body>
 <script charset="UTF-8" src="slider.js"></script>
 </html>
