--- a/demo.html
+++ b/demo.html
@@ -45,5 +45,5 @@
         <div id="5">5</div>
     </footer>
 </body>
-<script charset="UTF-8" src="slider.js"></script>
+<script charset="UTF-8" src="Slider.js"></script>
 </html>
