--- a/demo/demo.html
+++ b/demo/demo.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
-        <link charset="UTF-8" rel="stylesheet" type="text/css" href="demo.css"/>
+        <link charset="UTF-8" rel="stylesheet" type="text/css" href="./assets/style/css/demo.css"/>
     </head>
     <body id="body" />
-    <script charset="UTF-8" src="Slider.js"></script>
+    <script charset="UTF-8" src="./assets/script/js/Slider.js"></script>
 
 </html>
